[package]
name = "easyqueue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raft = { version = "0.7", features = ["prost-codec"], default-features = false }
prost = "0.12"
anyhow = "1.*"
clap = { version = "4.*", features = ["derive"] }
tokio = { version = "1", features = ["full", "tracing"] }
tonic = "0.*"
futures = "0.3.*"
tracing = "0.1.*"
tracing-subscriber = "0.3.*"


[build-dependencies]
tonic-build = "0.*"