[package]
name = "easyqueue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raft = { version = "0.7", features = ["prost-codec"], default-features = false }
prost = "0.11"
anyhow = "1.*"
clap = { version = "4.*", features = ["derive"] }
tokio = { version = "1", features = ["full", "tracing"] }
tonic = "0.9"
futures = "0.3.*"
tracing = "0.1.*"
tracing-subscriber = "0.3.*"
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.*"
async-trait = "0.1.77"
slog = "2"
bincode = "1.3.3"
log = "0.4.20"

[build-dependencies]
tonic-build = "0.*"